--- a/src/app/pages/medicine/appointments/appointments.component.html
+++ b/src/app/pages/medicine/appointments/appointments.component.html
@@ -5,38 +5,73 @@
         <tc-avatar [src]="value"></tc-avatar>
       </ng-template>
     </tc-table-col>
-    <tc-table-col [columnTitle]="'Name'" [columnName]="'name'" [enableSorting]="true">
+    <tc-table-col
+      [columnTitle]="'Name'"
+      [columnName]="'name'"
+      [enableSorting]="true"
+    >
       <ng-template #tableTDTemplate let-value>
         <strong>{{ value }}</strong>
       </ng-template>
     </tc-table-col>
-    <tc-table-col [columnTitle]="'Email'" [columnName]="'email'" [enableSorting]="true">
+    <tc-table-col
+      [columnTitle]="'Email'"
+      [columnName]="'email'"
+      [enableSorting]="true"
+    >
       <ng-template #tableTDTemplate let-value>
         <span class="d-flex align-items-center nowrap" [tcColor]="'#336cfb'">
-          <tc-icon [iconClass]="'icofont-ui-email'" [tcFontSize]="16" [padding]="0" class="mr-1"></tc-icon> {{ value }}
-        </span>
-      </ng-template>
-    </tc-table-col>
-    <tc-table-col [columnTitle]="'Date'" [columnName]="'date'" [enableSorting]="true">
-      <ng-template #tableTDTemplate let-value>
-        <span class="nowrap" [tcColor]="'#a5a5a5'">{{ value }}</span>
-      </ng-template>
-    </tc-table-col>
-    <tc-table-col [columnTitle]="'Visit time'" [columnName]="'fromTo'" [enableSorting]="true">
-      <ng-template #tableTDTemplate let-value>
-        <span class="nowrap" [tcColor]="'#a5a5a5'">{{ value }}</span>
-      </ng-template>
-    </tc-table-col>
-    <tc-table-col [columnTitle]="'Number'" [columnName]="'number'">
-      <ng-template #tableTDTemplate let-value>
-        <span class="d-flex align-items-center nowrap" [tcColor]="'#336cfb'">
-          <tc-icon [iconClass]="'icofont-ui-cell-phone'" [tcFontSize]="16" [padding]="0" class="mr-1"></tc-icon>
+          <tc-icon
+            [iconClass]="'icofont-ui-email'"
+            [tcFontSize]="16"
+            [padding]="0"
+            class="mr-1"
+          ></tc-icon>
           {{ value }}
         </span>
       </ng-template>
     </tc-table-col>
-    <tc-table-col [columnTitle]="'Doctor'" [columnName]="'doctor'" [enableSorting]="true"></tc-table-col>
-    <tc-table-col [columnTitle]="'Injury / Condition'" [columnName]="'injury'" [enableSorting]="true"></tc-table-col>
+    <tc-table-col
+      [columnTitle]="'Date'"
+      [columnName]="'date'"
+      [enableSorting]="true"
+    >
+      <ng-template #tableTDTemplate let-value>
+        <span class="nowrap" [tcColor]="'#a5a5a5'">{{ value }}</span>
+      </ng-template>
+    </tc-table-col>
+    <tc-table-col
+      [columnTitle]="'Visit time'"
+      [columnName]="'fromTo'"
+      [enableSorting]="true"
+    >
+      <ng-template #tableTDTemplate let-value>
+        <span class="nowrap" [tcColor]="'#a5a5a5'">{{ value }}</span>
+      </ng-template>
+    </tc-table-col>
+    <tc-table-col [columnTitle]="'Contact'" [columnName]="'number'">
+      <ng-template #tableTDTemplate let-value>
+        <span class="d-flex align-items-center nowrap" [tcColor]="'#336cfb'">
+          <tc-icon
+            [iconClass]="'icofont-ui-cell-phone'"
+            [tcFontSize]="16"
+            [padding]="0"
+            class="mr-1"
+          ></tc-icon>
+          {{ value }}
+        </span>
+      </ng-template>
+    </tc-table-col>
+    <tc-table-col
+      [columnTitle]="'Agent'"
+      [columnName]="'doctor'"
+      [enableSorting]="true"
+    ></tc-table-col>
+    <tc-table-col
+      [columnTitle]="'Condition'"
+      [columnName]="'injury'"
+      [enableSorting]="true"
+    ></tc-table-col>
     <tc-table-col [columnTitle]="'Actions'" [columnName]="'actions'">
       <ng-template #tableTDTemplate let-row="row">
         <div class="actions">
@@ -81,10 +116,23 @@
   <ng-template #modalBody>
     <form [formGroup]="appointmentForm" novalidate>
       <tc-form-group class="avatar-box d-flex">
-        <input type="file" accept="image/*" (change)="onFileChanged($event)" #fileInput hidden>
+        <input
+          type="file"
+          accept="image/*"
+          (change)="onFileChanged($event)"
+          #fileInput
+          hidden
+        />
 
         <tc-avatar [src]="appointmentForm.value.img"></tc-avatar>
-        <button tc-button [type]="'button'" [afterIcon]="'icofont-ui-user'" [view]="'accent'" [outline]="true" (click)="fileInput.click()">
+        <button
+          tc-button
+          [type]="'button'"
+          [afterIcon]="'icofont-ui-user'"
+          [view]="'accent'"
+          [outline]="true"
+          (click)="fileInput.click()"
+        >
           Select image
         </button>
       </tc-form-group>
@@ -94,7 +142,12 @@
       </tc-form-group>
 
       <tc-form-group>
-        <tc-autocomplete [placeholder]="'Doctor'" [data]="doctors" [key]="'name'" formControlName="doctor"></tc-autocomplete>
+        <tc-autocomplete
+          [placeholder]="'Agent'"
+          [data]="doctors"
+          [key]="'name'"
+          formControlName="doctor"
+        ></tc-autocomplete>
       </tc-form-group>
 
       <tc-form-group>
@@ -108,7 +161,10 @@
       <div class="row">
         <div class="col col-md-6">
           <tc-form-group>
-            <tc-input [placeholder]="'Time from'" formControlName="from"></tc-input>
+            <tc-input
+              [placeholder]="'Time from'"
+              formControlName="from"
+            ></tc-input>
           </tc-form-group>
         </div>
 
@@ -120,20 +176,35 @@
       </div>
 
       <tc-form-group>
-        <tc-input [placeholder]="'Number'" formControlName="number"></tc-input>
+        <tc-input [placeholder]="'Contact'" formControlName="number"></tc-input>
       </tc-form-group>
 
       <tc-form-group class="mb-0">
-        <tc-input [placeholder]="'Injury'" formControlName="injury"></tc-input>
+        <tc-input
+          [placeholder]="'Agreement'"
+          formControlName="injury"
+        ></tc-input>
       </tc-form-group>
     </form>
   </ng-template>
 
   <ng-template #modalFooter>
     <div class="actions justify-content-between">
-      <button tc-button [type]="'button'" [view]="'error'" (click)="closeModal()">Cancel</button>
-      <button tc-button [view]="'info'" [disabled]="appointmentForm.invalid" (click)="addAppointment(appointmentForm)">
-        Add appointment
+      <button
+        tc-button
+        [type]="'button'"
+        [view]="'error'"
+        (click)="closeModal()"
+      >
+        Cancel
+      </button>
+      <button
+        tc-button
+        [view]="'info'"
+        [disabled]="appointmentForm.invalid"
+        (click)="addAppointment(appointmentForm)"
+      >
+        Update operation
       </button>
     </div>
   </ng-template>
