--- a/src/app/pages/medicine/patients/patients.component.html
+++ b/src/app/pages/medicine/patients/patients.component.html
@@ -1,21 +1,39 @@
 <tc-card class="mb-0">
-  <tc-table [rows]="patients" [hovered]="true" [pagination]="true" [headerBgColor]="'#336cfb'" [headerColor]="'#fff'">
+  <tc-table
+    [rows]="patients"
+    [hovered]="true"
+    [pagination]="true"
+    [headerBgColor]="'#336cfb'"
+    [headerColor]="'#fff'"
+  >
     <tc-table-col [columnTitle]="'Photo'" [columnName]="'img'">
       <ng-template #tableTDTemplate let-value>
         <tc-avatar [src]="value"></tc-avatar>
       </ng-template>
     </tc-table-col>
-    <tc-table-col [columnTitle]="'Name'" [columnName]="'name'" [enableSorting]="true">
+    <tc-table-col
+      [columnTitle]="'Name'"
+      [columnName]="'name'"
+      [enableSorting]="true"
+    >
       <ng-template #tableTDTemplate let-value>
         <strong>{{ value }}</strong>
       </ng-template>
     </tc-table-col>
-    <tc-table-col [columnTitle]="'ID'" [columnName]="'id'" [enableSorting]="true">
+    <tc-table-col
+      [columnTitle]="'ID'"
+      [columnName]="'id'"
+      [enableSorting]="true"
+    >
       <ng-template #tableTDTemplate let-value>
         <span [tcColor]="'#a5a5a5'" #id>{{ value }}</span>
       </ng-template>
     </tc-table-col>
-    <tc-table-col [columnTitle]="'Age'" [columnName]="'age'" [enableSorting]="true">
+    <tc-table-col
+      [columnTitle]="'Age'"
+      [columnName]="'age'"
+      [enableSorting]="true"
+    >
       <ng-template #tableTDTemplate let-value>
         <span [tcColor]="'#a5a5a5'">{{ value }}</span>
       </ng-template>
@@ -27,10 +45,15 @@
     </tc-table-col>
     <tc-table-col [columnTitle]="'Number'" [columnName]="'number'">
       <ng-template #tableTDTemplate let-value>
-      <span class="d-flex align-items-center nowrap" [tcColor]="'#336cfb'">
-        <tc-icon [iconClass]="'icofont-ui-cell-phone'" [tcFontSize]="16" [padding]="0" class="mr-1"></tc-icon>
-        {{ value }}
-      </span>
+        <span class="d-flex align-items-center nowrap" [tcColor]="'#336cfb'">
+          <tc-icon
+            [iconClass]="'icofont-ui-cell-phone'"
+            [tcFontSize]="16"
+            [padding]="0"
+            class="mr-1"
+          ></tc-icon>
+          {{ value }}
+        </span>
       </ng-template>
     </tc-table-col>
     <tc-table-col [columnTitle]="'Last visit'" [columnName]="'lastVisit'">
@@ -38,9 +61,15 @@
         <span class="nowrap" [tcColor]="'#a5a5a5'">{{ value }}</span>
       </ng-template>
     </tc-table-col>
-    <tc-table-col [columnTitle]="'Status'" [columnName]="'status'" [enableSorting]="true">
+    <tc-table-col
+      [columnTitle]="'Status'"
+      [columnName]="'status'"
+      [enableSorting]="true"
+    >
       <ng-template #tableTDTemplate let-value>
-        <tc-badge [view]="value === 'Approved' ? 'success' : 'warning'">{{ value }}</tc-badge>
+        <tc-badge [view]="value === 'Approved' ? 'success' : 'warning'">{{
+          value
+        }}</tc-badge>
       </ng-template>
     </tc-table-col>
     <tc-table-col [columnTitle]="'Actions'" [columnName]="'actions'">
@@ -63,7 +92,9 @@
             [square]="true"
             [tcShape]="500"
             [size]="'sm'"
-            (click)="openModal(modalBody, 'Update patient info', modalFooter, row)"
+            (click)="
+              openModal(modalBody, 'Update Contractor info', modalFooter, row)
+            "
           ></button>
 
           <button
@@ -81,13 +112,18 @@
   </tc-table>
 </tc-card>
 
-
 <!-- edit patient Modal window -->
 <ng-container>
   <ng-template #modalBody>
     <form [formGroup]="patientForm" novalidate class="new-patient-form">
       <tc-form-group class="avatar-box d-flex">
-        <input type="file" accept="image/*" (change)="onFileChanged($event)" #fileInput hidden>
+        <input
+          type="file"
+          accept="image/*"
+          (change)="onFileChanged($event)"
+          #fileInput
+          hidden
+        />
 
         <tc-avatar [src]="currentAvatar"></tc-avatar>
         <button
@@ -107,39 +143,69 @@
       </tc-form-group>
 
       <tc-form-group>
-        <tc-input [placeholder]="'Number'" [type]="'number'" formControlName="number"></tc-input>
+        <tc-input
+          [placeholder]="'Number'"
+          [type]="'number'"
+          formControlName="number"
+        ></tc-input>
       </tc-form-group>
 
       <div class="row">
         <div class="col-12 col-sm-6">
           <tc-form-group>
-            <tc-input [placeholder]="'Age'" [type]="'number'" formControlName="age"></tc-input>
+            <tc-input
+              [placeholder]="'Age'"
+              [type]="'number'"
+              formControlName="age"
+            ></tc-input>
           </tc-form-group>
         </div>
 
         <div class="col-12 col-sm-6">
           <tc-form-group>
-            <tc-select [placeholder]="'Gender'" formControlName="gender" [options]="gender"></tc-select>
+            <tc-select
+              [placeholder]="'Gender'"
+              formControlName="gender"
+              [options]="gender"
+            ></tc-select>
           </tc-form-group>
         </div>
       </div>
 
       <tc-form-group>
-        <tc-select [placeholder]="'Status'" formControlName="status" [options]="status"></tc-select>
+        <tc-select
+          [placeholder]="'Status'"
+          formControlName="status"
+          [options]="status"
+        ></tc-select>
       </tc-form-group>
 
       <tc-form-group class="mb-0">
-        <tc-textarea [placeholder]="'Address'" formControlName="address"></tc-textarea>
+        <tc-textarea
+          [placeholder]="'Address'"
+          formControlName="address"
+        ></tc-textarea>
       </tc-form-group>
     </form>
   </ng-template>
 
   <ng-template #modalFooter>
     <div class="actions justify-content-between">
-      <button tc-button [type]="'button'" [view]="'error'" (click)="closeModal()">Cancel</button>
-      <button tc-button [view]="'info'" [disabled]="patientForm.invalid"
-      (click)="updatePatient(patientForm)">
-        Update patient
+      <button
+        tc-button
+        [type]="'button'"
+        [view]="'error'"
+        (click)="closeModal()"
+      >
+        Cancel
+      </button>
+      <button
+        tc-button
+        [view]="'info'"
+        [disabled]="patientForm.invalid"
+        (click)="updatePatient(patientForm)"
+      >
+        Update info
       </button>
     </div>
   </ng-template>
