--- a/src/app/pages/dashboards/dashboard-1/dashboard.component.html
+++ b/src/app/pages/dashboards/dashboard-1/dashboard.component.html
@@ -8,7 +8,7 @@
           <tc-icon
             [tcColor]="'rgba(51,108,251,0.5)'"
             [tcFontSize]="48"
-            [iconClass]="'icofont-first-aid-alt'"
+            [iconClass]="'icofont-water-drop'"
             [padding]="0"
           ></tc-icon>
         </div>
@@ -28,7 +28,7 @@
           <tc-icon
             [tcColor]="'rgba(51,108,251,0.5)'"
             [tcFontSize]="48"
-            [iconClass]="'icofont-wheelchair'"
+            [iconClass]="'icofont-institution'"
             [padding]="0"
           ></tc-icon>
         </div>
@@ -48,7 +48,7 @@
           <tc-icon
             [tcColor]="'rgba(51,108,251,0.5)'"
             [tcFontSize]="48"
-            [iconClass]="'icofont-blood'"
+            [iconClass]="'icofont-options'"
             [padding]="0"
           ></tc-icon>
         </div>
