--- a/src/app/pages/cocis/contractor/contractor.component.html
+++ b/src/app/pages/cocis/contractor/contractor.component.html
@@ -78,7 +78,7 @@
           <a
             href="#"
             tc-button
-            [routerLink]="['../', 'patient-profile']"
+            [routerLink]="['../', 'contractor-profile']"
             [afterIcon]="'icofont-external-link'"
             [square]="true"
             [tcShape]="500"
