--- a/src/app/ui/components/input/input.component.scss
+++ b/src/app/ui/components/input/input.component.scss
@@ -71,8 +71,7 @@ input:-webkit-autofill {
 
   .tc-input-wrap {
     align-items: center;
-    background-color: #cccccc;
-    // background: map-get($_bg, default);
+    background: map-get($_bg, default);
     border: $_border-width $_border-style map-get($_border, default);
     border-radius: inherit;
     cursor: text;
